styles and columns added

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <my-app>loading</my-app>
-
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
